--- a/화면설계/메인화면.md
+++ b/화면설계/메인화면.md
@@ -1,1 +1,3 @@
-![메인화면](/images/이름 없는 노트북-6.jpg)
+![메인화면](images/이름 없는 노트북-6.jpg)
+
+![캡처](/images/이름-없는-노트북-6.jpg)
