--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -1,2 +1,2 @@
-![구직자 회원가입 페이지](images/jobseekerJoinPage-1.jpg)
-![기업 회원가입 페이지](images/corpJoinPage-2.jpg)
+![구직자 회원가입 페이지](images/jobseekerJoinPage.jpg)
+![기업 회원가입 페이지](images/corpJoinPage.jpg)
