--- a/화면설계/메인페이지.md
+++ b/화면설계/메인페이지.md
@@ -1,4 +1,4 @@
-# 메인화면 화면 구성 이미지
+# 메인 화면 구성 이미지
 
 ## 메인 페이지
 ![메인화면](images/메인페이지-6.jpg)
@@ -28,8 +28,9 @@
 - 제목은 채용 공고 명을 보여준다.
 - 기업의 이름이 표시된다.
 - 이미지는 기업이 채용 공고를 등록할 때 업로드한 이미지를 보여준다.
+- 채용 공고를 클릭하면 해당 기업이 업로드한 채용 공고 페이지로 이동된다.
 - ex)D-1 처럼  날짜 계산 기능을 이용해 남은 지원 일자를 표시한다.(보류)
 - 별모양을 클릭하면 해당 공고의 정보가 구직자의 기업 즐겨 찾기 리스트에 추가된다. (보류)
-- 채용 공고를 클릭하면 해당 기업이 업로드한 채용 공고 페이지로 이동된다.
+
 
 
