--- a/화면설계/구직자별점평가구현기능.md
+++ b/화면설계/구직자별점평가구현기능.md
@@ -1,7 +1,13 @@
-![구직자별점평가메인캡쳐본](images/guzig_star_main_cap.jpg)
+![구직자별점평가캡쳐](images/guzig_star_main_cap.jpg)
+
 ![구직자별점평가메인페이지](images/guzig_star_main.jpg)
-![구직자별점평가보기캡쳐본](images/guzig_star_view_cap.jpg)
+
+![구직자별점평가보기캡쳐](images/guzig_star_view_cap.jpg)
+
 ![구직자별점평가보기페이지](images/guzig_star_view.jpg)
-![구직자별점평가작성캡쳐본](images/guzig_star_write_cap.jpg)
+
+![구직자별점평가작성캡쳐](images/guzig_star_write_cap.jpg)
+
 ![구직자별점평가작성페이지](images/guzig_star_write.jpg)
+
 ![구직자별점평가마이페이지](images/guzig_star_mypage.jpg)
