--- a/화면설계/구직자이력서메인페이지.md
+++ b/화면설계/구직자이력서메인페이지.md
@@ -1,2 +1,2 @@
-![구직자이력서메인페이지][images/guzig_resue_main_screen.JPG]
+![구직자이력서메인페이지](https://github.com/yyujjin/jjob-korea/assets/148675065/f12d346c-04d1-4198-a80c-4094ccbc7d61)
 ![guzig_resume_ex_main](https://github.com/yyujjin/jjob-korea/assets/148675065/57eae1fb-1a6d-4267-b640-410f609493fb)
