--- a/화면설계/구직자이력서메인페이지.md
+++ b/화면설계/구직자이력서메인페이지.md
@@ -1,2 +1,5 @@
-![구직자이력서메인페이지](https://github.com/yyujjin/jjob-korea/assets/148675065/f12d346c-04d1-4198-a80c-4094ccbc7d61)
 ![guzig_resume_ex_main](https://github.com/yyujjin/jjob-korea/assets/148675065/57eae1fb-1a6d-4267-b640-410f609493fb)
+![구직자이력서메인페이지](https://github.com/yyujjin/jjob-korea/assets/148675065/f12d346c-04d1-4198-a80c-4094ccbc7d61)
+![guzig_resume_ex_form](https://github.com/yyujjin/jjob-korea/assets/148675065/d60e9ac4-0dd5-42cf-baa0-1fc42275a1b2)
+![guzig_resume_ex_form2](https://github.com/yyujjin/jjob-korea/assets/148675065/932c8bbb-b5cc-48dd-a0fc-9f89fe840284)
+![구직자이력서양식](https://github.com/yyujjin/jjob-korea/assets/148675065/ab6fc409-0955-4870-94e6-9153c3082ca1)
