--- a/화면설계/구직자이력서작성페이지.md
+++ b/화면설계/구직자이력서작성페이지.md
@@ -1,5 +1,7 @@
 ![guzig_resume_ex_main](https://github.com/yyujjin/jjob-korea/assets/148675065/57eae1fb-1a6d-4267-b640-410f609493fb)
 ![구직자이력서메인페이지](https://github.com/yyujjin/jjob-korea/assets/148675065/f12d346c-04d1-4198-a80c-4094ccbc7d61)
+
+구직자 이력서 양식 초안
 ![guzig_resume_ex_form](https://github.com/yyujjin/jjob-korea/assets/148675065/35e3a17b-4fa0-474a-ae96-cac75889b3db)
 ![guzig_resume_ex_form2](https://github.com/yyujjin/jjob-korea/assets/148675065/f2f25840-fa07-46e1-bede-580de4e029c4)
 ![구직자이력서양식초안](https://github.com/yyujjin/jjob-korea/assets/148675065/eb5d84a3-5aed-4b33-a122-e2e0c629713f)
