--- a/화면설계/기업게시판페이지.md
+++ b/화면설계/기업게시판페이지.md
@@ -5,13 +5,50 @@
 ![기업게시판마이페이지](images/giup_gasipan_mypage.jpg)
 
 -----------------------------------------------------------------------------------------
+## 기업 커뮤니티 게시판 구현
 
 ![1](https://github.com/yyujjin/jjob-korea/assets/166809120/0d4a19ff-7bf6-412f-8fe2-ecc7d0363d80)
 ![2](https://github.com/yyujjin/jjob-korea/assets/166809120/493a70d5-9c36-49cc-bb2a-4ceb188d57b7)
 ![3](https://github.com/yyujjin/jjob-korea/assets/166809120/69efb0f4-76d5-459d-9224-de24cfcaf8e2)
+
+## 메인
+자유 게시판의 글들의 목록을 보여준다.
+원하는 글을 클릭해서 해당 글의 내용을 볼 수 있으며 조회수, 아이디, 제목등이 표시된다
+출력되는 글은 10개정도 그 외에는 클릭을 통해 다음 페이지로 넘겨서 출력한다.
+글작성 버튼을 눌러서 글작성 페이지로 이동한다.
+
+
+
+
+
 ![4](https://github.com/yyujjin/jjob-korea/assets/166809120/4edc1438-b19e-47a7-bdc7-63dccd0436f5)
+
+## 상세글 내용 페이지
+입력한 제목
+내용을 출력한다.
+글을 수정할 수 있는 버튼을 통해 글수정 페이지로 이동한다.
+글삭제 버튼을 이용해 글을 삭제하는 페이지로 이동한다.
+글목록 돌아가기 버튼을 통해 메인 글목록 페이지로 이동한다.
+
+댓글 기능을 구현한다면 글을 입력할 수 있는 텍스트 란과 작성하기 버튼을 만든다.
+해당 글은 짧은 글만 가능하며(150~200자) 닉네임 글내용 수정/삭제 버튼이 있다.
+
 ![5](https://github.com/yyujjin/jjob-korea/assets/166809120/48b48648-3a75-453c-a579-23e8e0317017)
+
+## 기업 회원 구직회원 이력서 열람 목록
+대가를 지불하는 기업회원에게 제공하는 기능으로 기업 커뮤니티 게시판에 추가한다.
+구직자들의 이력서를 리스트 출력되어 있고 관심있는 이력서를 클릭하면 구직자 이력서 페이지로 이동한다.
+글을 작성하기보다 정보 조회 목적의 게시판으로 활용된다.
+
+
 ![6](https://github.com/yyujjin/jjob-korea/assets/166809120/6da76351-108f-4524-8ae7-b8782b98a8a6)
+
+## 구직자 이력서 상세 페이지
+구직자의 이름/ 생년월일/ 성별/ email/휴대전화/주소/구직자의 개발능력(java, jsp, 스프링,html 등) /학력
+/경력/ 포트폴리오/자기소개서를 출력한다.
+이력서 열람 목록으로 이동하는 글목록으로 버튼이 있다.
+입사제안 버튼을 누르면 해당 구직자에게 입사를 제안하는 알람이 가도록 설정한다.
+
 ![7](https://github.com/yyujjin/jjob-korea/assets/166809120/7837ef83-12cd-46c9-bc8d-fc0f83dfabda)
 ![8](https://github.com/yyujjin/jjob-korea/assets/166809120/170f288d-f2d8-4d8f-84c5-89e6d6221c78)
 
