--- a/화면설계/기업별점평가구현기능.md
+++ b/화면설계/기업별점평가구현기능.md
@@ -3,8 +3,35 @@
 ![기업별점평가작성페이지](images/giup_star_write.png)
 ![기업별점평가마이페이지](images/giup_star_mypage.png)
 
+
+
+
 ![1](https://github.com/yyujjin/jjob-korea/assets/166809120/23a00826-a730-4089-a350-96e7f02f3fd9)
+
+##헤드
+짭코리아 로고를 통해 목차(메인)페이지로 링크
+우측의 로그인 버튼을 통해 로그인 페이지로 이동
+우측의 회원가입 버튼을 통해 회원가입 페이지로 이동
+(로그인 후) 로그인과 회원가입 버튼 대신 유저의 이름 표기
+
+##네비게이션
+각 목차를 클릭시 해당 페이지로 이동하는 네비게이션 버튼을 생성한다.
+각각 구직자, 기업의 커뮤니티 게시판, 채용정보, 평점(별점) 사이트로 이동한다.
+
+##좌측 네비게이션
+평가조건들을 표시(1.급여가 좋은지 5점 절대평가, 2.근무환경(정시출퇴근/자기성장가능성/자유복장/상여금/교육지원))하여 해당 조건들의 점수가 높은 순 낮은 순으로 
+페이지를 정렬할 수 있게한다.
+예시) 급여 점수 3점 이상&&근무환경 해당 조건 3개 이상
+
 ![2](https://github.com/yyujjin/jjob-korea/assets/166809120/e5b4b16d-8ab0-462f-babf-f229dce613c4)
+
+##주요 화면
+
+각 기업들의 사진과 기업명 별점이 표시되는 리스트를 보여준다.
+
+원하는 리스트를 클릭하면 해당 기업의 정보페이지로 이동한다.
+
+필요시 마음에 드는 기업을 스크랩하는 기능
 ![3](https://github.com/yyujjin/jjob-korea/assets/166809120/6c857f5e-49ac-44cc-a83b-e6ba62c937d4)
 ![4](https://github.com/yyujjin/jjob-korea/assets/166809120/ff24a928-15d5-4357-bed5-fa2cd0d0c2a8)
 ![5](https://github.com/yyujjin/jjob-korea/assets/166809120/deb1ce33-2ec1-4a47-adc3-cc92e2d7ec5e)
