--- a/화면설계/메인페이지.md
+++ b/화면설계/메인페이지.md
@@ -11,16 +11,25 @@
 
 ## 로고
 프로젝트 로고
-## 카테고리
-(상의 후 결정)
+
+## 네비게이션
+- [채용 정보] 클릭 시 채용 정보 페이지로 이동한다.
+- [기업] ? 
+- [기업 게시판] 클릭 시 기업 게시판 메인 페이지로 이동한다.
+- [구직자 게시판] 클릭 시 구직자 게시판 메인 페이지로 이동한다.
+- [구직자 평점 관리] 클릭 시 구직자 별점 평가 메인 페이지로 이동한다.
+- [기업 평점 관리] 클릭 시 기업 별점 평가 메인 페이지로 이동한다.
+  
 ## 로그인 전
 - 로그인버튼을 클릭하면 로그인 페이지로 이동한다. 
 - 회원가입 버튼을 클릭하면 회원가입 페이지로 이동한다.
+
 ## 로그인 후
 [예시](#로그인-후-상단바-표시-예시)
-- 유저의 이름이 표시된다.
-- 마이페이지 버튼을 클릭하면 개인 정보 창으로 이동한다. (보류)
-- 로그아웃 버튼을 클릭하면 [로그아웃 하시겠습니까?] 라는 알림창을 표시하고 [예]버튼을 클릭하면 [로그아웃 되었습니다.]라는 알림창과 함께 로그아웃된다. 
+- 로그인 된 유저의 이름이 표시된다.
+- 마이페이지 버튼을 클릭하면 마이 페이지로 이동한다.
+- 로그아웃 버튼을 클릭하면 [로그아웃 하시겠습니까?] 라는 알림창을 표시하고 [예]버튼을 클릭하면 [로그아웃 되었습니다.]라는 알림창과 함께 로그아웃된다.
+  
 ## 채용 공고 리스트
 - 8개의 채용 공고 리스트를 보여준다.
 - 8개 이상의 채용 공고 리스트가 등록될 경우 [더보기]버튼을 클릭할 때마다 8개의 채용 공고 리스트가 추가되어 화면에 보여진다. 
@@ -32,6 +41,5 @@
 - 채용 공고를 클릭하면 해당 기업이 업로드한 채용 공고 페이지로 이동된다.
 - ex)D-1 처럼  날짜 계산 기능을 이용해 남은 지원 일자를 표시한다.(보류)
 - 별모양을 클릭하면 해당 공고의 정보가 구직자의 기업 즐겨 찾기 리스트에 추가된다. (보류)
-
 
 
