--- a/화면설계/로그인페이지.md
+++ b/화면설계/로그인페이지.md
@@ -4,7 +4,7 @@
 로그인/회원가입
 
 ->로그인 선택
-:메인페이지에서 로그인버튼을 클릭하면 로그인페이지로 이동한다.
+-메인페이지에서 로그인버튼을 클릭하면 로그인페이지로 이동한다.
 
 # 구직자 로그인 화면
 ![구직자 로그인 화면](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/login_guzig.jpg)
@@ -13,7 +13,7 @@
 # 기업회원 로그인 화면
 ![기업회원 로그인 화면](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/login_giup.jpg)
 **check**-로그인 시 아이디,비밀번호 일치하는지/로그인 정보가 저장 되어있을경우/아이디,비밀번호찾기,회원가입 클릭하면 색상변경(blue)
-:아이디 혹은 비밀번호를 적지않고 로그인 버튼을 누르면 [이 입력란을 작성하세요.]라는 메시지창이 뜬다.
+-아이디 혹은 비밀번호를 적지않고 로그인 버튼을 누르면 [이 입력란을 작성하세요.]라는 메시지창이 뜬다.
 
 
 # 로그인 실패한 경우(아이디,비밀번호 불일치)
@@ -24,4 +24,4 @@
 
 # 로그인 성공
 ![로그인 후 메인화면](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/loginaftermain.jpg)
-:아이디와 비밀번호가 일치한다면 로그인이 되며, 메인페이지로 넘어가게 된다.
+-아이디와 비밀번호가 일치한다면 로그인이 되며, 메인페이지로 넘어가게 된다.
