--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -9,24 +9,29 @@
 :사용자가 필수적으로 입력해야하는 란에는 '*'를 표시한다.
 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
 
-이름: 기본적인 알림창은 존재하지 않지만 12글자까지 작성 가능하
-잡코리아 기준 아이디 같은 경우는 [6~16자의 영문 소문자, 숫자만 사용 가능합니다.] 라는 메시지가,
-비밀번호: [8~16자의 영문, 숫자, 특수문자 조합으로 입력해주세요.],
-이메일 : **@****.com의 형식이 있으며 이에 맞지않게 기입 한다면 [이메일 정보를 다시 확인해주세요.] / @,. 포함- 33글자까지 입력이 가능
+이름: 기본적인 알림창은 존재하지 않지만 12글자까지 작성 가능함
+잡코리아 기준 
+아이디 : [6 ~ 16자의 영문 소문자, 숫자만 사용 가능합니다.] 라는 메시지가, 중복된 아이디라면 [이미 사용중인 아이디입니다.]
+비밀번호:[8 ~ 16자의 영문, 숫자, 특수문자 조합으로 입력해주세요.],
+이메일 : **@****.com의 형식이 있으며 이에 맞지않게 기입 한다면 [이메일 정보를 다시 확인해주세요.] / '@','.' 포함- 33글자까지 입력이 가능
 휴대폰 번호: 000-0000-0000의 형식이 있으며 이에 맞지 않게 기입 한다면 [올바르지 않은  휴대폰 번호입니다]
 (인증번호 전송의 버튼은 우선 보류)
 
 약관동의는 모두 선택 가능한 버튼이 있고, 필수와 선택의 버튼이 따로 존재하며 필수선택을 선택하지않고 가입하기를 누른다면 [필수 항목을 확인해주세요.]라는 알림창이 뜬다.
 
 
-
+# 기업 회원 가입
+![구직자 회원가입](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup.jpg)
+![기업 회원가입2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup2.jpg)
+**check** - 필수값, 약관동의
+: 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
+기업형태 : 체크박스로 몇가지의 선택지가 필요함 
+기업인증(사업자등록증면원 발급번호): 기입하지 않으면 [증명원 발급 번호를 재확인 해주세요.]라는 알림창
+회사주소: 글자로 입력할 수 있게
 # 회원가입 이후 화면
 - 공유 1조를 참고,차이점: 공유 1조는 기술분야를 선택 후 회원가입이 완료,잡코리아는 회원가입 후 1분 프로필 작성
 ![회원가입 후 프로필 예시1](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs1.jpg)
 ![회원가입 후 프로필 예시2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs2.jpg)
 ![회원가입 후 프로필 예시3](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs3.jpg)
 
-# 기업 회원 가입
-![구직자 회원가입](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup.jpg)
-![기업 회원가입2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup2.jpg)
-**check** - 필수값, 약관동의
+
