--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -24,10 +24,10 @@
 ![구직자 회원가입](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup.jpg)
 ![기업 회원가입2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_giup2.jpg)
 **check** - 필수값, 약관동의
-: 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
-기업형태 : 체크박스로 몇가지의 선택지가 필요함 
-기업인증(사업자등록증면원 발급번호): 기입하지 않으면 [증명원 발급 번호를 재확인 해주세요.]라는 알림창
-회사주소: 글자로 입력할 수 있게
++ 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
+  + 기업형태 : 체크박스로 몇가지의 선택지가 필요함 
+  + 기업인증(사업자등록증면원 발급번호): 기입하지 않으면 [증명원 발급 번호를 재확인 해주세요.]라는 알림창
+  + 회사주소: 글자로 입력할 수 있게
 # 회원가입 이후 화면
 - 공유 1조를 참고,차이점: 공유 1조는 기술분야를 선택 후 회원가입이 완료,잡코리아는 회원가입 후 1분 프로필 작성
 ![회원가입 후 프로필 예시1](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs1.jpg)
