--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -17,7 +17,8 @@
   + 휴대폰 번호: 000-0000-0000의 형식이 있으며 이에 맞지 않게 기입 한다면 [올바르지 않은  휴대폰 번호입니다]
   (인증번호 전송의 버튼은 우선 보류)
 
-  + 약관동의는 모두 선택 가능한 버튼이 있고, 필수와 선택의 버튼이 따로 존재하며 필수선택을 선택하지않고 가입하기를 누른다면     [필수 항목을 확인해주세요.]라는 알림창이 뜬다.
+  + 약관동의는 모두 선택 가능한 버튼이 있고, 필수와 선택의 버튼이 따로 존재하며 필수선택을 선택하지않고 가입하기를 누른다면
+    [필수 항목을 확인해주세요.]라는 알림창이 뜬다.
 
 
 # 기업 회원 가입
