--- a/화면설계/로그인페이지.md
+++ b/화면설계/로그인페이지.md
@@ -24,6 +24,8 @@
 ![로그인 실패 화면](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/faillogin.jpg)
 **check**-메시지 창
 + 아이디 혹은 비밀번호를 틀린다면 아이디 또는 비밀번호가 일치하지 않습니다.라고 표시되며 따로 메시지창이 안내된다.
+  +  메시지 창 : www.jobkorea.co.kr 내용 - 아이디 또는 비밀번호가 일치하지 않습니다
+                다시 확인 후 입력해주시기 바랍니다.
 (개인회원과 기업회원 로그인 모두 같은 형식이다.)
 
 # 로그인 성공
