--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -3,6 +3,7 @@
 로그인/회원가입
 ->회원가입 선택
 :메인페이지에서 회원가입을 클릭하면 메인페이지로 이동한다.
+  + 개인회원과 기업회원의 두 종류가 있다.
 # 구직자 회원 가입
 ![구직자 회원가입](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/joinmembership_guzig.jpg)
 **check** - 필수값, 약관동의
@@ -11,12 +12,12 @@
 
   + 이름: 기본적인 알림창은 존재하지 않지만 12글자까지 작성 가능함
   + 잡코리아 기준 
-  아이디 : [6 ~ 16자의 영문 소문자, 숫자만 사용 가능합니다.] 라는 메시지가, 중복된 아이디라면 [이미 사용중인 아이디입니다.]
-  + 비밀번호:[8 ~ 16자의 영문, 숫자, 특수문자 조합으로 입력해주세요.],
+    아이디 : [필수정보입니다.]입력할 때 제한사항을 지키지 않는다면 [6 ~ 16자의 영문 소문자, 숫자만 사용 가능합니다.] 라는 메시지가, 중복된 아이디라면 [이미 사용중인 아이디입니다.]
+  + 비밀번호:[필수정보입니다.]입력할 때 제한사항을 지키지 않는다면 [8 ~ 16자의 영문, 숫자, 특수문자 조합으로 입력해주세요.],
   + 이메일 : **@****.com의 형식이 있으며 이에 맞지않게 기입 한다면 [이메일 정보를 다시 확인해주세요.] / '@','.' 포함- 33글자까지 입력이 가능
   + 휴대폰 번호: 000-0000-0000의 형식이 있으며 이에 맞지 않게 기입 한다면 [올바르지 않은  휴대폰 번호입니다]
   (인증번호 전송의 버튼은 우선 보류)
-
+ 
   + 약관동의는 모두 선택 가능한 버튼이 있고, 필수와 선택의 버튼이 따로 존재하며 필수선택을 선택하지않고 가입하기를 누른다면
     [필수 항목을 확인해주세요.]라는 알림창이 뜬다.
 
