--- a/화면설계/기업게시판글작성페이지.md
+++ b/화면설계/기업게시판글작성페이지.md
@@ -1,2 +1,17 @@
 
+# 기업게시판 글작성란 구성 이미지
 ![기업게시판 글작성](https://github.com/yyujjin/jjob-korea/assets/166809120/7bd23bfa-0b0b-4f69-85ac-d89b3f34855f)
+
+# 구성 설명
+
+## 입력란
+- 제목은 제목 입력란에 작성한다
+- 내용은 내용 작성란에 작성한다.
+  
+## 버튼
+- 등록 버튼을 누르면 글 작성이 성공되며 글목록으로 돌아간다.
+- 취소 버튼을 누르면 글 작성이 취소되고 글목록으로 돌아간다.
+
+## 조건
+- 로그인을 한 상태에서만 글을 작성할 수 있다.
+
