--- a/화면설계/기업게시판글보기페이지.md
+++ b/화면설계/기업게시판글보기페이지.md
@@ -1,1 +1,5 @@
-asdf
+
+
+![기업게시판 글목록](https://github.com/yyujjin/jjob-korea/assets/166809120/b81e909b-9652-4acd-ab61-7c2b3088fe02)
+
+![기업게시판 상세글 내용](https://github.com/yyujjin/jjob-korea/assets/166809120/292e8a5b-8150-468a-b17f-c27ccde2bc0c)
