--- a/화면설계/기업게시판글보기페이지.md
+++ b/화면설계/기업게시판글보기페이지.md
@@ -1,5 +1,37 @@
-
+# 기업게시판 글보기란 구성 이미지
 
 ![기업게시판 글목록](https://github.com/yyujjin/jjob-korea/assets/166809120/b81e909b-9652-4acd-ab61-7c2b3088fe02)
+# 구성 설명
+## 게시판 종류
+
+- 기본적으로 기업 자유게시판의 글목록을 표현한다.
+- 좌측네비게이션을 통해 지원자 이력서 열람게시판으로 이동할 수 있다.
+  
+## 화면출력
+- 글은 글제목/작성자/조회수로 표시된다. 해당 글을 클릭하면 상세글을 읽을 수 있다.
+- 번호 버튼을 이용해 글목록을 이동할 수 있다 5~10개 정도씩만 글을 출력한다.
+
+## 글작성 버튼
+- 글작성 버튼을 누를 시 글을 작성하는 페이지로 이동한다.
 
 ![기업게시판 상세글 내용](https://github.com/yyujjin/jjob-korea/assets/166809120/292e8a5b-8150-468a-b17f-c27ccde2bc0c)
+
+# 구성 설명
+
+## 화면구성
+- 작성된 글의 제목과 조회수 작성일 내용을 표시한다.
+- 댓글을 입력하는 공간이 있다.
+  
+## 버튼
+- 해당 글을 작성한 계정으로 로그인시 글수정 버튼을 누르면 글을 수정하는 페이지로 이동한다.
+- 해당 글을 작성한 계정으로 로그인시 글삭제 버튼을 누르면 글을 삭제하고  글목록 페이지로 이동한다.
+
+## 조건
+- 댓글은 로그인을 한 상태에서만 글을 작성할 수 있다.
+- 글을 수정하고 삭제하는 것은 해당 글을 작성할 때 사용한 계정으로만 가능하다.
+
+
+
+
+
+
