--- a/화면설계/기업별정평가보기페이지.md
+++ b/화면설계/기업별정평가보기페이지.md
@@ -1,1 +1,6 @@
+
+
+![image](https://github.com/yyujjin/jjob-korea/assets/166809120/4a02169e-dd35-4291-9584-e4f4da7120f1)
+
+
 ![기업별점평가보기](https://github.com/yyujjin/jjob-korea/assets/166809120/b313610f-a040-476e-81dc-6373663c3cd3)
