--- a/화면설계/기업별점작성페이지.md
+++ b/화면설계/기업별점작성페이지.md
@@ -1,1 +1,21 @@
-작성
+# 별점작성 페이지 이미지
+![image](https://github.com/yyujjin/jjob-korea/assets/166809120/9ea2d539-7157-481a-80ff-f4bbfb0a69de)
+
+
+## 조건
+- 구직자 아이디로 로그인하고 해당 기업에 면접을 보고 온 기록이 있는 사람
+- 해당 기업에 일하고 있는 사람
+
+
+# 구성 설명
+
+## 키워드
+- 좋았던 점에 대해서 체크할 수 있다.
+
+## 별점
+- 해당 기업에 대한 총체적인 평가를 1~5점으로 별점을 줄 수 있다.
+
+## 버튼
+  - 제출 버튼을 누르면 해당 작성한 정보가 기업리뷰창에 추가되고 기업리뷰목록페이지로 이동한다.
+  - 취소 버튼을 누르면 이전 페이지로 돌아간다.
+
