--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -1,1 +1,35 @@
+# Job Posting Page Wireframe
+
+This document contains the wireframe for a job posting page designed in Diagrams.net. The wireframe includes sections for the header, main content, sidebar, and footer.
+
+## Wireframe Sections
+
+### Header
+- Logo
+- Navigation menu
+- Search box
+
+### Main Content
+- Job title
+- Company information
+- Job requirements
+- Apply Now button
+
+### Sidebar
+- Related job listings
+
+### Footer
+- Copyright information
+- Contact details
+- Site map links
+
+## Diagrams.net File
+
+You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://www.diagrams.net/your-diagram-file-link)
+
+## Wireframe Image
+
+![Wireframe Example](sandbox:/mnt/data/file-l4I2v7Dcqvrv1RLfo7QfNc4K)
+![Wireframe Example 2](sandbox:/mnt/data/file-k8eK6ZwDJCi0EzV311MdSyQp)
+
 
