--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -31,9 +31,9 @@
 
 ![필수값1](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/giup_f1.jpg)
 
-![필수값2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs2.jpg)
+![필수값2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/giup_f2.jpg)
 
-![필수값3](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs3.jpg)
+![필수값3](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/giup_f3.jpg)
 
 + 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
   + 기업형태 : 체크박스로 몇가지의 선택지가 필요함 
@@ -44,5 +44,7 @@
 ![회원가입 후 프로필 예시1](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs1.jpg)
 ![회원가입 후 프로필 예시2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs2.jpg)
 ![회원가입 후 프로필 예시3](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs3.jpg)
+
++ 1분 프로필은 직무, 근무지역, 기업형태 3가지 정도의 형태로 이 데이터를 채용정보와 결합하여 구직자가 채용정보를 카테고리별로 볼 수있게 만들고 싶음 
 
 
