--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -29,7 +29,7 @@ You can view and edit the wireframe in Diagrams.net using the following link: [D
 
 ## Wireframe Image
 
-![Wireframe Example](sandbox:/mnt/data/file-l4I2v7Dcqvrv1RLfo7QfNc4K)
+[![Wireframe Example](sandbox:/mnt/data/file-l4I2v7Dcqvrv1RLfo7QfNc4K)](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
 ![Wireframe Example 2](sandbox:/mnt/data/file-k8eK6ZwDJCi0EzV311MdSyQp)
 
 
