--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -5,31 +5,28 @@ This document contains the wireframe for a job posting page designed in Diagrams
 ## Wireframe Sections
 
 ### Header
-- Logo
-- Navigation menu
-- Search box
+- **Logo**
+- **Navigation menu**
+- **Search box**
 
 ### Main Content
-- Job title
-- Company information
-- Job requirements
-- Apply Now button
+- **Job title**
+- **Company information**
+- **Job requirements**
+- **Apply Now button**
 
 ### Sidebar
-- Related job listings
+- **Related job listings**
 
 ### Footer
-- Copyright information
-- Contact details
-- Site map links
+- **Copyright information**
+- **Contact details**
+- **Site map links**
 
 ## Diagrams.net File
 
-You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://www.diagrams.net/your-diagram-file-link)
+You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
 
 ## Wireframe Image
 
-[![Wireframe Example](sandbox:/mnt/data/file-l4I2v7Dcqvrv1RLfo7QfNc4K)](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
-![Wireframe Example 2](sandbox:/mnt/data/file-k8eK6ZwDJCi0EzV311MdSyQp)
-
-
+![Wireframe Example](https://drive.google.com/uc?export=view&id=1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW)
