--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -25,7 +25,7 @@ This document contains the wireframe for a job posting page designed in Diagrams
 
 ## Diagrams.net File
 
-You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
+You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://drive.google.com/file/d/uc?export=view&1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
 
 ## Wireframe Image
 
