--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -1,4 +1,4 @@
-# Job Posting Page Wireframe
+\# Job Posting Page Wireframe
 
 This document contains the wireframe for a job posting page designed in Diagrams.net. The wireframe includes sections for the header, main content, sidebar, and footer.
 
