--- a/화면설계/구직자별점평가구현기능.md
+++ b/화면설계/구직자별점평가구현기능.md
@@ -1,13 +1,33 @@
-![구직자별점평가캡쳐](images/guzig_star_main_cap.jpg)
+![구직자별점평가 메인](images/1guzig_star_main)
+## 구직자 별점평가 메인페이지
+- [글쓰기] 클릭시 [구직자별점평가 작성페이지] 로 이동한다.  
+- [기업별], [별점순], [최신순] 클릭시 해당 기준으로 글을 정렬한다.
+- 각 글마다 조회수, 좋아요수, 댓글수, 작성일 표기한다.  
+- [이전][다음] 클릭시 페이지 이동이 가능하게 한다.      
 
-![구직자별점평가메인페이지](images/guzig_star_main.jpg)
+![구직자별점평가 작성](images/3guzig_star_write)
+## 구직자 별점평가 글작성페이지
+좌측 [글쓰기]은 삭제한다.
+- [기업선택]기업A,B,C 중 선택할수 있게 한다.
+- [기업명 검색] 해서 선택할 수 있게 한다.
+- [별점병가] 클릭시 별점을 평가할 수 있게 한다.
+- 별점과 글내용 입력후 [등록하기] 클릭시 [구직자 별점평가 글보기페이지] 로 이동한다.  
+- [취소] 시 [구직자 별점평가 메인페이지]로 이동한다.   
 
-![구직자별점평가보기캡쳐](images/guzig_star_view_cap.jpg)
+![구직자별점평가 글보기](images/5guzig_star_view)
+## 구직자 별점평가 글보기페이지
+- [글쓰기] 클릭시 [구직자별점평가 작성페이지] 로 이동한다.  
+- 댓글 작성 후 [등록] 클릭시 [구직자게시판 글보기페이지] 로 이동한다.
+  
+![구직자별점평가마이페이지 글없을때](images/6guzig_star_mypage_nonwrite)
+## 구직자 별점평가 마이페이지 글X
+좌측 [글쓰기] 버튼 삭제
+글정렬은 최신순으로 한다.
+- [글쓰기] 클릭시 [구직자 별점평가 작성페이지] 로 이동한다.
+- [목록] 클릭시 [구직자 별점평가 메인페이지]로 이동한다.  
 
-![구직자별점평가보기페이지](images/guzig_star_view.jpg)
-
-![구직자별점평가작성캡쳐](images/guzig_star_write_cap.jpg)
-
-![구직자별점평가작성페이지](images/guzig_star_write.jpg)
-
-![구직자별점평가마이페이지](images/guzig_star_mypage.jpg)
+![구직자별점평가마이페이지 글있을때](images/7guzig_star_mypage_writed)
+## 구직자 별점평가 마이페이지 글O
+- [글쓰기] 클릭시 [구직자별점평가 작성페이지] 로 이동한다.
+번호, 기업명, 날짜/시간, 리뷰내용, 별점 표시가되며 날짜/시간 순으로 표시한다.
+- [이전][다음] 클릭시 페이지 이동이 가능하게 한다.   
