--- a/화면설계/회원가입페이지.md
+++ b/화면설계/회원가입페이지.md
@@ -38,13 +38,12 @@
 + 필수값(*)을 입력하지 않으면 [필수정보입니다.]라는 알림창이 뜨며, 필수값이 하나라도 없다면 회원가입이 되지않는다.
   + 기업형태 : 체크박스로 몇가지의 선택지가 필요함 
   + 기업인증(사업자등록증면원 발급번호): 기입하지 않으면 [증명원 발급 번호를 재확인 해주세요.]라는 알림창
-  + 회사주소: 체크박스를 사용하며, 시도와 시군구까지만.
+  + 회사주소: 선택박스를 사용하며, 시도와 시군구까지만.
 # 회원가입 이후 화면
 - 공유 1조를 참고,차이점: 공유 1조는 기술분야를 선택 후 회원가입이 완료,잡코리아는 회원가입 후 1분 프로필 작성
 ![회원가입 후 프로필 예시1](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs1.jpg)
 ![회원가입 후 프로필 예시2](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs2.jpg)
 ![회원가입 후 프로필 예시3](https://github.com/yyujjin/jjob-korea/blob/main/%ED%99%94%EB%A9%B4%EC%84%A4%EA%B3%84/images/after_joinmbs3.jpg)
 
-+ 1분 프로필은 직무, 근무지역, 기업형태 3가지 정도의 형태로 이 데이터를 채용정보와 결합하여 구직자가 채용정보를 카테고리별로 볼 수있게 만들고 싶음 
-
++ 1분 프로필은 직무, 근무지역, 기업형태 3가지 정도의 형태로 이 데이터를 채용정보와 결합하여 구직자가 채용정보를 카테고리별로 볼 수있게 만들랭 
 
