--- a/화면설계/공고출력.md
+++ b/화면설계/공고출력.md
@@ -1,1 +1,74 @@
+# 신입사원 모집 페이지 기능 요구 사항
+
+이 문서는 신입사원 모집 페이지의 기능 요구 사항을 설명합니다. 각 섹션은 구현해야 할 특정 기능을 설명합니다.
+
+## 1. 채용 정보
+
+### 1.1 공고 제목 및 회사 정보
+- **설명**: 페이지 상단에  신입사원 모집 공고 제목과 회사 정보를 표시합니다.
+- **요구 사항**:
+  - 공고 제목은 굵게 표시합니다.
+  - 회사 정보는 산업, 사원수, 설립년도, 기업형태, 홈페이지 등의 정보를 포함합니다.
+
+### 1.2 지원 자격 및 근무 조건
+- **설명**: 지원 자격 및 근무 조건을 표시합니다.
+- **요구 사항**:
+  - 지원 자격: 경력, 학력, 스킬 등을 포함합니다.
+  - 근무 조건: 고용 형태, 급여, 지역 등의 정보를 포함합니다.
+
+### 1.3 지원 버튼
+- **설명**: 사용자가 지원할 수 있는 버튼을 제공합니다.
+- **요구 사항**:
+  - "홈페이지 지원" 버튼은 클릭 시 지원 페이지로 이동합니다.
+  - "스크랩" 버튼은 사용자가 공고를 저장할 수 있도록 합니다.
+
+## 2. 모집 공고 상세 내용
+
+### 2.1 모집 분야 및 내용
+- **설명**: 채용 공고의 세부 내용을 텍스트 형식으로 표시합니다.
+- **요구 사항**:
+  - 모집 분야, 모집 인원, 지원 자격 등의 정보를 포함합니다.
+
+### 2.2 근무 조건
+- **설명**: 근무 시간, 근무 위치, 급여 등 근무 조건을 표시합니다.
+- **요구 사항**:
+  - 근무 조건은 텍스트 형식으로 명확하게 표시합니다.
+
+### 2.3 복지 및 혜택
+- **설명**: 회사에서 제공하는 복지 및 혜택을 설명합니다.
+- **요구 사항**:
+  - 복지 및 혜택은 목록 형식으로 나열합니다.
+
+### 2.4 전형 절차
+- **설명**: 지원자가 거쳐야 하는 전형 절차를 단계별로 설명합니다.
+- **요구 사항**:
+  - 전형 절차는 목록 형식으로 나열합니다.
+
+### 2.5 유의 사항
+- **설명**: 지원자가 주의해야 할 사항을 나열합니다.
+- **요구 사항**:
+  - 유의 사항은 목록 형식으로 명확하게 표시합니다.
+
+## 3. 지원 방법
+
+### 3.1 지원 방법 안내
+- **설명**: 지원 방법을 안내합니다.
+- **요구 사항**:
+  - 지원 방법에 대한 상세한 안내를 제공합니다.
+  - 지원서 제출 링크를 포함합니다.
+
+## 4. 기업 정보
+
+### 4.1 기업 정보 표시
+- **설명**: 회사의 정보를 표시합니다.
+- **요구 사항**:
+  - 회사명, 산업, 사원수, 설립년도, 기업형태, 홈페이지 등을 포함합니다.
+
+## 5. 관련 공고
+
+### 5.1 관련 공고 리스트
+- **설명**: 다른 관련 채용 공고를 리스트 형식으로 표시합니다.
+- **요구 사항**:
+  - 각 공고는 클릭 가능해야 하며, 상세 페이지로 이동합니다.
+
 
