--- a/화면설계/공고출력.md
+++ b/화면설계/공고출력.md
@@ -25,27 +25,32 @@
 ## 2. 모집 공고 상세 내용
 
 ### 2.1 모집 분야 및 내용
-- **설명**: 채용 공고의 세부 내용을 텍스트 형식으로 표시합니다.
+- **설명**: 채용 공고의 세부 내용을 표시합니다.
+- 이미지가 있을 경우 이미지를 출력하고, 없으면 정해진 텍스트 양식에 따라 출력합니다.
 - **요구 사항**:
   - 모집 분야, 모집 인원, 지원 자격 등의 정보를 포함합니다.
 
 ### 2.2 근무 조건
 - **설명**: 근무 시간, 근무 위치, 급여 등 근무 조건을 표시합니다.
+- 이미지가 있을 경우 이미지를 출력하고, 없으면 정해진 텍스트 양식에 따라 출력합니다.
 - **요구 사항**:
   - 근무 조건은 텍스트 형식으로 명확하게 표시합니다.
 
 ### 2.3 복지 및 혜택
 - **설명**: 회사에서 제공하는 복지 및 혜택을 설명합니다.
+- 이미지가 있을 경우 이미지를 출력하고, 없으면 정해진 텍스트 양식에 따라 출력합니다.
 - **요구 사항**:
   - 복지 및 혜택은 목록 형식으로 나열합니다.
 
 ### 2.4 전형 절차
 - **설명**: 지원자가 거쳐야 하는 전형 절차를 단계별로 설명합니다.
+- 이미지가 있을 경우 이미지를 출력하고, 없으면 정해진 텍스트 양식에 따라 출력합니다.
 - **요구 사항**:
   - 전형 절차는 목록 형식으로 나열합니다.
 
 ### 2.5 유의 사항
 - **설명**: 지원자가 주의해야 할 사항을 나열합니다.
+- 이미지가 있을 경우 이미지를 출력하고, 없으면 정해진 텍스트 양식에 따라 출력합니다.
 - **요구 사항**:
   - 유의 사항은 목록 형식으로 명확하게 표시합니다.
 
