--- a/화면설계/공고출력.md
+++ b/화면설계/공고출력.md
@@ -1,3 +1,6 @@
+[Google Drive Link](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=sharing)
+
+
 # 신입사원 모집 페이지 기능 요구 사항
 
 이 문서는 신입사원 모집 페이지의 기능 요구 사항을 설명합니다. 각 섹션은 구현해야 할 특정 기능을 설명합니다.
