--- a/화면설계/공고출력.md
+++ b/화면설계/공고출력.md
@@ -1,4 +1,5 @@
 [[Google Drive Link](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=sharing)](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=sharing)
+DRAW.IO로 열어야 합니다.
 
 
 # 신입사원 모집 페이지 기능 요구 사항
