--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -1,32 +1,96 @@
-\# Job Posting Page Wireframe
+# 공고 입력 양식 기능 요구 사항
 
-This document contains the wireframe for a job posting page designed in Diagrams.net. The wireframe includes sections for the header, main content, sidebar, and footer.
+이 문서는 공고 입력 양식의 기능 요구 사항을 설명합니다. 각 섹션은 구현해야 할 특정 기능을 설명합니다.
 
-## Wireframe Sections
+## 1. 모집공고 입력
 
-### Header
-- **Logo**
-- **Navigation menu**
-- **Search box**
+### 1.1 모집공고 정보
+- **설명**: 공고의 기본 정보를 입력합니다.
+- **요구 사항**:
+  - **모집공고명**: 공고명을 입력합니다.
+  - **모집직종**: 직종을 선택합니다.
+  - **경력사항**: 경력 요건을 선택합니다.
+  - **모집인원**: 모집 인원을 입력합니다.
 
-### Main Content
-- **Job title**
-- **Company information**
-- **Job requirements**
-- **Apply Now button**
+### 1.2 자격요건 및 우대조건
+- **설명**: 지원 자격 및 우대 조건을 입력합니다.
+- **요구 사항**:
+  - **학력**: 학력 요건을 선택합니다.
+  - **전공**: 전공을 입력합니다.
+  - **자격증**: 관련 자격증을 입력합니다.
+  - **우대조건**: 우대 조건을 선택합니다.
 
-### Sidebar
-- **Related job listings**
+### 1.3 근무조건
+- **설명**: 근무 조건을 입력합니다.
+- **요구 사항**:
+  - **근무형태**: 근무 형태를 선택합니다.
+  - **근무지역**: 근무 지역을 입력합니다.
+  - **근무시간**: 근무 시간을 입력합니다.
+  - **급여조건**: 급여 조건을 입력합니다.
 
-### Footer
-- **Copyright information**
-- **Contact details**
-- **Site map links**
+### 1.4 접수기간 및 방법
+- **설명**: 접수 기간 및 방법을 입력합니다.
+- **요구 사항**:
+  - **접수기간**: 접수 시작일과 종료일을 입력합니다.
+  - **접수방법**: 접수 방법을 선택합니다.
 
-## Diagrams.net File
+### 1.5 전형절차 및 제출서류
+- **설명**: 전형 절차 및 제출 서류를 입력합니다.
+- **요구 사항**:
+  - **전형절차**: 전형 절차를 입력합니다.
+  - **제출서류**: 제출 서류를 입력합니다.
 
-You can view and edit the wireframe in Diagrams.net using the following link: [Diagrams.net Wireframe](https://drive.google.com/file/d/1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW/view?usp=drive_link)
+### 1.6 담당자 연락처
+- **설명**: 담당자의 연락처 정보를 입력합니다.
+- **요구 사항**:
+  - **이름**: 담당자의 이름을 입력합니다.
+  - **연락처**: 담당자의 연락처를 입력합니다.
+  - **이메일**: 담당자의 이메일을 입력합니다.
 
-## Wireframe Image
+### 1.7 채용제목
+- **설명**: 채용 제목을 입력합니다.
+- **요구 사항**:
+  - **채용제목**: 채용 제목을 입력합니다.
 
-![Wireframe Example](https://drive.google.com/uc?export=view&id=1yF-jqTTvQxHRjMM6x8O8yKAKTD1ZkdcW)
+## 2. 이력서 입력
+
+### 2.1 인적사항
+- **설명**: 지원자의 인적사항을 입력합니다.
+- **요구 사항**:
+  - **이름**: 지원자의 이름을 입력합니다.
+  - **성별**: 지원자의 성별을 선택합니다.
+  - **생년월일**: 지원자의 생년월일을 입력합니다.
+  - **이메일**: 지원자의 이메일을 입력합니다.
+  - **연락처**: 지원자의 연락처를 입력합니다.
+  - **주소**: 지원자의 주소를 입력합니다.
+  - **사진**: 지원자의 사진을 업로드합니다.
+
+### 2.2 희망직무
+- **설명**: 지원자가 희망하는 직무를 입력합니다.
+- **요구 사항**:
+  - **희망직무**: 희망하는 직무를 입력합니다.
+  - **희망연봉**: 희망 연봉을 입력합니다.
+
+### 2.3 스킬
+- **설명**: 지원자의 스킬을 입력합니다.
+- **요구 사항**:
+  - **스킬**: 지원자의 스킬을 입력합니다.
+
+### 2.4 희망근무조건
+- **설명**: 지원자가 희망하는 근무 조건을 입력합니다.
+- **요구 사항**:
+  - **근무형태**: 희망하는 근무 형태를 선택합니다.
+  - **희망지역**: 희망하는 근무 지역을 입력합니다.
+  - **근무시간**: 희망하는 근무 시간을 입력합니다.
+
+### 2.5 개인 정보 수집 및 이용 동의
+- **설명**: 개인 정보 수집 및 이용 동의를 받습니다.
+- **요구 사항**:
+  - **동의 체크박스**: 개인 정보 수집 및 이용 동의 여부를 체크합니다.
+
+### 2.6 이력서 저장 및 제출
+- **설명**: 이력서를 저장하거나 제출합니다.
+- **요구 사항**:
+  - **이력서 저장 버튼**: 이력서를 저장합니다.
+  - **이력서 제출 버튼**: 이력서를 제출합니다.
+
