--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -1,96 +1,111 @@
-# 공고 입력 양식 기능 요구 사항
+# 구인 공고 입력 페이지
 
-이 문서는 공고 입력 양식의 기능 요구 사항을 설명합니다. 각 섹션은 구현해야 할 특정 기능을 설명합니다.
+## 회사 정보
+- **회사명**: 
+- **설립연도**: 
+- **근무지**: 
+- **사원수**: 
+- **산업분야**: 
+- **홈페이지**: 
 
-## 1. 모집공고 입력
+## 모집 정보
+### 모집 부문 1
+- **모집 부문**: 
+- **직급/직책**: 
+- **고용 형태**: 
+- **모집 인원**: 
+- **학력/경력**: 
+- **직무 내용**: 
+- **자격 요건**: 
+- **우대 사항**: 
 
-### 1.1 모집공고 정보
-- **설명**: 공고의 기본 정보를 입력합니다.
-- **요구 사항**:
-  - **모집공고명**: 공고명을 입력합니다.
-  - **모집직종**: 직종을 선택합니다.
-  - **경력사항**: 경력 요건을 선택합니다.
-  - **모집인원**: 모집 인원을 입력합니다.
+### 모집 부문 2
+- **모집 부문**: 
+- **직급/직책**: 
+- **고용 형태**: 
+- **모집 인원**: 
+- **학력/경력**: 
+- **직무 내용**: 
+- **자격 요건**: 
+- **우대 사항**: 
 
-### 1.2 자격요건 및 우대조건
-- **설명**: 지원 자격 및 우대 조건을 입력합니다.
-- **요구 사항**:
-  - **학력**: 학력 요건을 선택합니다.
-  - **전공**: 전공을 입력합니다.
-  - **자격증**: 관련 자격증을 입력합니다.
-  - **우대조건**: 우대 조건을 선택합니다.
+(필요 시 추가 모집 부문 작성)
 
-### 1.3 근무조건
-- **설명**: 근무 조건을 입력합니다.
-- **요구 사항**:
-  - **근무형태**: 근무 형태를 선택합니다.
-  - **근무지역**: 근무 지역을 입력합니다.
-  - **근무시간**: 근무 시간을 입력합니다.
-  - **급여조건**: 급여 조건을 입력합니다.
+## 근무 조건
+- **근무 시간**: 
+- **급여**: 
+- **복리후생**: 
+  - 지원금/보험: 
+  - 휴일/휴가: 
+  - 건강관리: 
+  - 생활 편의 지원: 
+  - 교육/훈련: 
+  - 차량 관련 지원: 
 
-### 1.4 접수기간 및 방법
-- **설명**: 접수 기간 및 방법을 입력합니다.
-- **요구 사항**:
-  - **접수기간**: 접수 시작일과 종료일을 입력합니다.
-  - **접수방법**: 접수 방법을 선택합니다.
+## 전형 절차
+- **접수 기간**: 
+- **접수 방법**: 
+- **전형 절차**: 
 
-### 1.5 전형절차 및 제출서류
-- **설명**: 전형 절차 및 제출 서류를 입력합니다.
-- **요구 사항**:
-  - **전형절차**: 전형 절차를 입력합니다.
-  - **제출서류**: 제출 서류를 입력합니다.
+## 제출 서류
+- **이력서**: 
+- **자기소개서**: 
+- **기타 서류**: 
 
-### 1.6 담당자 연락처
-- **설명**: 담당자의 연락처 정보를 입력합니다.
-- **요구 사항**:
-  - **이름**: 담당자의 이름을 입력합니다.
-  - **연락처**: 담당자의 연락처를 입력합니다.
-  - **이메일**: 담당자의 이메일을 입력합니다.
+## 문의 사항
+- **담당자 이름**: 
+- **연락처**: 
+- **이메일**: 
+- **회사 주소**: 
 
-### 1.7 채용제목
-- **설명**: 채용 제목을 입력합니다.
-- **요구 사항**:
-  - **채용제목**: 채용 제목을 입력합니다.
+## 예시
 
-## 2. 이력서 입력
+### 회사 정보
+- **회사명**: (주)시스윈로보틱스
+- **설립연도**: 2004년
+- **근무지**: 경기도 화성시 동탄
+- **사원수**: 70명
+- **산업분야**: 로봇 및 자동화 시스템
+- **홈페이지**: syswin.co.kr
 
-### 2.1 인적사항
-- **설명**: 지원자의 인적사항을 입력합니다.
-- **요구 사항**:
-  - **이름**: 지원자의 이름을 입력합니다.
-  - **성별**: 지원자의 성별을 선택합니다.
-  - **생년월일**: 지원자의 생년월일을 입력합니다.
-  - **이메일**: 지원자의 이메일을 입력합니다.
-  - **연락처**: 지원자의 연락처를 입력합니다.
-  - **주소**: 지원자의 주소를 입력합니다.
-  - **사진**: 지원자의 사진을 업로드합니다.
+### 모집 정보
+#### 모집 부문 1
+- **모집 부문**: 소프트웨어 개발
+- **직급/직책**: 대리/부장
+- **고용 형태**: 정규직
+- **모집 인원**: 00명
+- **학력/경력**: 4년제 대학 졸업 이상, 관련 경력 2년 이상
+- **직무 내용**: 반도체 디스플레이 설비 SW 개발
+- **자격 요건**: C, C++, Python 등 프로그래밍 언어 능숙
+- **우대 사항**: 석사학위 소지자
 
-### 2.2 희망직무
-- **설명**: 지원자가 희망하는 직무를 입력합니다.
-- **요구 사항**:
-  - **희망직무**: 희망하는 직무를 입력합니다.
-  - **희망연봉**: 희망 연봉을 입력합니다.
+#### 모집 부문 2
+- **모집 부문**: Vision/영상처리 개발
+- **직급/직책**: 대리~부장
+- **고용 형태**: 정규직
+- **모집 인원**: 00명
+- **학력/경력**: 4년제 대학 졸업 이상, 관련 경력 2년 이상
+- **직무 내용**: 머신비전, 영상처리 알고리즘 개발
+- **자격 요건**: C#, C++, C, Python, 영상처리 라이브러리
+- **우대 사항**: 석사/박사 학위
 
-### 2.3 스킬
-- **설명**: 지원자의 스킬을 입력합니다.
-- **요구 사항**:
-  - **스킬**: 지원자의 스킬을 입력합니다.
+### 근무 조건
+- **근무 시간**: 주 5일(08:00~17:00)
+- **급여**: 회사 내규에 따름
+- **복리후생**: 지원금/보험, 건강관리, 교육/훈련, 차량 관련 지원 등
 
-### 2.4 희망근무조건
-- **설명**: 지원자가 희망하는 근무 조건을 입력합니다.
-- **요구 사항**:
-  - **근무형태**: 희망하는 근무 형태를 선택합니다.
-  - **희망지역**: 희망하는 근무 지역을 입력합니다.
-  - **근무시간**: 희망하는 근무 시간을 입력합니다.
+### 전형 절차
+- **접수 기간**: 2024년 6월 20일까지
+- **접수 방법**: 온라인 지원
+- **전형 절차**: 서류전형 → 면접전형 → 최종합격
 
-### 2.5 개인 정보 수집 및 이용 동의
-- **설명**: 개인 정보 수집 및 이용 동의를 받습니다.
-- **요구 사항**:
-  - **동의 체크박스**: 개인 정보 수집 및 이용 동의 여부를 체크합니다.
+### 제출 서류
+- **이력서**: 
+- **자기소개서**: 
+- **기타 서류**: 경력 증명서 등
 
-### 2.6 이력서 저장 및 제출
-- **설명**: 이력서를 저장하거나 제출합니다.
-- **요구 사항**:
-  - **이력서 저장 버튼**: 이력서를 저장합니다.
-  - **이력서 제출 버튼**: 이력서를 제출합니다.
-
+### 문의 사항
+- **담당자 이름**: 유호희 대리
+- **연락처**: 031-203-0923
+- **이메일**: company@example.com
+- **회사 주소**: 경기도 화성시 동탄기흥로 64-4
