--- a/화면설계/공고등록.md
+++ b/화면설계/공고등록.md
@@ -20,6 +20,28 @@
 - **우대 사항**: 
 
 ### 모집 부문 2
+- **모집 부문### 구인 공고 입력 페이지
+
+## 회사 정보
+- **회사명**: 
+- **설립연도**: 
+- **근무지**: 
+- **사원수**: 
+- **산업분야**: 
+- **홈페이지**: 
+
+## 모집 정보
+### 모집 부문 1
+- **모집 부문**: 
+- **직급/직책**: 
+- **고용 형태**: 
+- **모집 인원**: 
+- **학력/경력**: 
+- **직무 내용**: 
+- **자격 요건**: 
+- **우대 사항**: 
+
+### 모집 부문 2
 - **모집 부문**: 
 - **직급/직책**: 
 - **고용 형태**: 
