--- a/화면설계/공고출력페이지.md
+++ b/화면설계/공고출력페이지.md
@@ -1,1 +1,7 @@
-야호야호 ~
+![공고출력1](images/공고출력1.png)
+![공고출력2](images/공고출력2.png)
+![공고출력3](images/공고출력3.png)
+![공고출력4](images/공고출력4.png)
+![공고출력5](images/공고출력5.png)
+![공고출력6](images/공고출력6.png)
+
