--- a/화면설계/공고출력페이지.md
+++ b/화면설계/공고출력페이지.md
@@ -1,4 +1,4 @@
-![공고출력1](images/공고출력1.png)
+![공고출력1](images/Notice output1.png)
 ![공고출력2](images/공고출력2.png)
 ![공고출력3](images/공고출력3.png)
 ![공고출력4](images/공고출력4.png)
