--- a/화면설계/기업등록페이지.md
+++ b/화면설계/기업등록페이지.md
@@ -1,3 +1,2 @@
-![공고입력화면](images/공고양식.png)
-의 프레임을 베이스로 필드값을 추가해서 작성
-![공고입력화면](images/공고양식2.png)
+[피그마 디자인 보기](https://www.figma.com/design/8iEcOj9bwPrkiPCsLIZP2O/%EB%9A%9C%EA%BF%8D%EC%9D%98-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8?t=1hU1zoTYMIOWUAi6-0)
+
